--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #646464;
+		color: #f5f5f5;
 		font-weight: 300;
 		line-height: 1em;
 		margin: 0 0 0.5em 0;
@@ -409,7 +409,7 @@
 /* Box */
 
 	.box {
-		background: #fff;
+		background: rgba(10, 10, 10, 0.64);
 		border-radius: 6px;
 		box-shadow: 0 2px 0 0 #e5e5e5;
 		margin: 0 0 2em 0;
